# learning_opencv

./: CMakeLists.txt  debug.md  environment_configuration.md  note.md  note2.md  run.sh
OpenCV4/: 01_trackbar.py
src/: CMakeLists.txt  ch3_mix.cpp  helloworld.cpp  image.cpp
src/zlm_tutorials/: ch1.cpp
